# Autoencoders-in-blackbox-optimization

./: .gitignore  VAE.py  build_external_coco_bundle.py  control.ipynb  control_graphs.py  control_notebook_lib.py  doe_sweep.py  doe_sweep_plots.py  evo.py  justfile  main.py  models.py  pyproject.toml  ranks.py  stat_significance.py  storage.py  vae_sweep.py  validate_thesis_exports.py
control_analysis/: __init__.py  cli.py  constants.py  data.py  formatting.py  jobs.py  models.py  plotting.py  stats.py  transforms.py
data/: df.npz
diplomka.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
doe2vec/: doe2vec.py
exdata/: doe.pickle  doe28.pickle  doeplain28.pickle  elm100.pickle  gp.pickle  nn3.pickle  no.pickle  no_surrogate.pickle
graphs/: Adequately structured multimodal functions, all dims, first 12 evaluations.tex  Adequately structured multimodal functions, all dims, first 15 evaluations.tex  Adequately structured multimodal functions, all dims.tex  Adequately structured multimodal functions, dim 10, first 12 evaluations.tex  Adequately structured multimodal functions, dim 10, first 15 evaluations.tex  Adequately structured multimodal functions, dim 10.tex  Adequately structured multimodal functions, dim 2, first 12 evaluations.tex  Adequately structured multimodal functions, dim 2, first 15 evaluations.tex  Adequately structured multimodal functions, dim 2.tex  Adequately structured multimodal functions, dim 5, first 12 evaluations.tex  Adequately structured multimodal functions, dim 5, first 15 evaluations.tex  (+61 more)
(+2612 files in other folders)
